# graywolf

./: .gitignore  .goreleaser.yml  Cargo.toml  Cross.toml  Gemfile  Makefile  README.md  go.mod
.context/: 2026-05-01-android-app-design.md  2026-05-08-android-poc-b-results.md  2026-05-08-android-poc-c-results.md  2026-05-08-android-poc-c-spec.md  2026-05-09-android-phase-2-results.md  2026-05-09-android-phase-2-spec.md  2026-05-09-android-phase-3-results.md
.github/workflows/: android.yml  ci.yml  release.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
cmd/graywolf/: android_config.go  android_config_test.go  main.go  main_android.go  parentwatch.go  parentwatch_test.go
cmd/graywolf-pocb/: main.go  platform_handshake_android.go  platform_handshake_other.go  pocb_index.html
cmd/play-whatsnew/: main.go
docs/handbook/: actions-handler-safety-powershell.html  actions-handler-safety-shell.html  actions-handler-safety-webhooks.html  actions-handler-safety.html  actions.html  agwpe.html  architecture.html  audio.html  ax25-terminal.html  beacons.html  callsign.html  channels.html  configurations.html  digipeater.html  gps.html  history-database.html  igate.html  index.html  installation.html  kiss-bluetooth.html  kiss-serial.html  kiss-usb-serial.html  kiss.html  livemap.html  logs.html  maps.html  messaging.html  monitoring.html  preferences.html  ptt.html  remote-actions.html  remote-kiss-tnc.html  simulation.html
docs/wiki/: README.md  actions.md  android-play-store.md  build-pipelines.md  code-map.md  glossary.md  invariants.md  system-topology.md
fastlane/: Appfile  Fastfile
graywolf-modem/: Cargo.toml
graywolf-modem/benches/: afsk_bench.rs
graywolf-modem/src/: decode.rs  demod_afsk_multi.rs  filter_buf.rs  lib.rs  list_audio.rs  list_usb.rs  record.rs  rxonly.rs  txtest.rs  wavio.rs
graywolf-modem/src/android/: audio.rs  audio_tx.rs  config_state.rs  mod.rs  upcall.rs
graywolf-modem/src/audio/: soundcard.rs
graywolf-modem/src/ipc/: proto.rs
graywolf-modem/src/modem/: mod.rs  tx_worker.rs
graywolf-modem/src/tx/: canned.rs  mod.rs  ptt.rs  ptt_android.rs  ptt_android_consts.rs  ptt_rigctld.rs
graywolf-modem/tests/: correctness.rs  decode_e2e.rs  ipc_flac_e2e.rs
graywolf/web/: package-lock.json  package.json
packaging/aur/: .SRCINFO  PKGBUILD
packaging/grafana/: remote-kiss-tnc.json
pkg/actions/: classifier.go  classifier_test.go  cmd_executor.go  cmd_executor_test.go  parser.go  parser_test.go  reply_messages.go  reply_messages_test.go  runner.go  runner_test.go  sanitize.go  sanitize_freeform.go  sanitize_freeform_test.go  template_filters.go  template_filters_test.go  types.go  webhook_executor.go  webhook_executor_test.go
pkg/app/: app.go  config.go  flags.go  flags_test.go  gpsmanager.go  gpsmanager_android.go  gpsmanager_default.go  kiss_openfunc_android.go  kiss_openfunc_android_test.go  kiss_openfunc_default.go  kiss_openfunc_default_test.go  platformsvc_android.go  platformsvc_default.go  pttsource_android.go  pttsource_default.go  rxfanout.go  rxfanout_test.go  usbserialsource_android.go  usbserialsource_default.go  wiring.go
pkg/aprs/: mice.go  mice_test.go  tnc2.go  tnc2_test.go
pkg/ax25/: frame.go  priority.go
pkg/ax25conn/: CREDITS.md  control.go  control_test.go  defaults.go  events.go  frame.go  frame_test.go  heartbeat.go  heartbeat_test.go  manager_test.go  session.go  session_test.go  timers.go  timers_test.go  transitions_awaiting_connection.go  transitions_awaiting_connection_test.go  transitions_awaiting_release.go  transitions_awaiting_release_test.go  transitions_connected.go  transitions_connected_test.go  transitions_disconnected.go  transitions_disconnected_test.go  transitions_timer_recovery.go
pkg/ax25termws/: bridge.go  bridge_test.go  envelope.go
pkg/beacon/: scheduler.go  scheduler_heap_test.go  scheduler_test.go  sendnow_error.go  sendnow_error_test.go
pkg/clocksync/: clocksync_linux.go  clocksync_linux_test.go
pkg/configstore/: action_invocations.go  action_invocations_test.go  iface.go  messages.go  migrate.go  migrate_actions_argmode.go  migrate_actions_argmode_test.go  migrate_channel_mode.go  migrate_channel_mode_test.go  migrate_downloads.go  migrate_downloads_bbox.go  migrate_downloads_bbox_test.go  migrate_downloads_test.go  migrate_kiss_tcp_client_tx_default_test.go  models.go  models_test.go  seed_downloads.go  seed_downloads_test.go  store.go  store_test.go
pkg/demoseed/: demoseed.go  demoseed_test.go
pkg/igate/: tnc2.go
pkg/ipcproto/: graywolf.pb.go
pkg/kiss/: serial.go
pkg/mapscache/: manager.go  manager_test.go  pmtiles_header.go  pmtiles_header_test.go
pkg/mapscatalog/: catalog.go  catalog_test.go
pkg/mapsslug/: slug.go
pkg/messages/: blocklist_set.go  blocklist_set_test.go  preflight.go  preflight_test.go  router.go  router_blocklist_test.go  router_test.go  sender.go  sender_log_test.go  service.go
pkg/modembridge/: bridge.go  bridge_stop_test.go  ptt_watchdog.go  ptt_watchdog_test.go  requests.go  session.go
pkg/packetlog/: packetlog.go  subscribe.go  subscribe_test.go
pkg/platformproto/: drift_test.go  platform.pb.go
pkg/platformsvc/: btserial.go  btserial_test.go  client.go  client_impl.go  client_test.go  framing.go  framing_test.go  hello_mismatch_test.go  reconnect_test.go  schema_version.go  serialstream.go  subscriptions.go  types.go  usbserial.go  usbserial_test.go
pkg/pttdevice/: android.go  android_test.go  usb_devices.go  usb_devices_test.go
pkg/releasenotes/: notes.yaml  plaintext.go  plaintext_test.go
pkg/remoteactions/: store_creds.go  store_creds_test.go
pkg/stationcache/: memcache.go  memcache_test.go  store.go
pkg/txgovernor/: governor.go
pkg/webapi/: action_test_fire.go  action_test_fire_test.go  actions.go  actions_test.go  audio_devices.go  beacons.go  (+41 more)
poc-a-android/: Cargo.toml
poc-a-android/src/: audio_record.rs  lib.rs  usb.rs
proto/: graywolf.proto  platform.proto
scripts/: check-android-toolchain.sh
web/: package-lock.json  package.json  vite.config.js
(+329 files in other folders)
