[package]
name = "graywolf-demod"
version = "0.11.4"
edition = "2021"
description = "Rust port of the Dire Wolf AFSK demodulator"

[dependencies]
claxon = "0.4"
prost = "0.13"
bytes = "1"
cpal = "0.17"
hidapi = "2.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# USB topology enumeration for `--list-audio`'s sibling --list-usb.
# Pure-Rust, no libusb dependency, and works cross-platform without
# requiring privileged kernel APIs.
nusb = "0.1"

[target.'cfg(unix)'.dependencies]
# Direct POSIX access for serial PTT: fcntl::open + libc TIOCMSET ioctls.
# Matches direwolf's approach (no termios calls at all on PTT-only fds).
nix = { version = "0.29", features = ["fs", "ioctl"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Linux GPIO PTT via gpiochip chardev v2 API. Pure-Rust; no CGo, no raw
# kernel-header struct layouts maintained locally. Same crate family as
# `go-gpiocdev` used by the Go enumeration side.
gpiocdev = "0.7"
# Direct dep on the uapi crate so we can pattern-match `Errno(i32)` when
# mapping errors. `gpiocdev` re-uses `gpiocdev_uapi::Errno` inside its
# `Error::Os` variant but doesn't re-export the type; naming it requires
# this direct dep. Version pinned to match gpiocdev 0.7's transitive.
gpiocdev-uapi = { version = "0.6", default-features = false, features = ["uapi_v2"] }

[target.'cfg(windows)'.dependencies]
# Windows PTT: CreateFileW + EscapeCommFunction. Microsoft's official
# idiomatic Rust wrapper around Win32, not raw windows-sys.
windows = { version = "0.59", features = [
    "Win32_Devices_Communication",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.bench]
inherits = "release"

[[bench]]
name = "afsk_bench"
harness = false

[[bin]]
name = "graywolf-modem"
path = "src/bin/graywolf_modem.rs"

[[bin]]
name = "demod-bench"
path = "src/bin/demod_bench.rs"

[[bin]]
name = "demod-multi"
path = "src/bin/demod_multi.rs"

[[bin]]
name = "demod-ipc-bench"
path = "src/bin/demod_ipc_bench.rs"
