[package]
name = "graywolf-demod"
version = "0.14.8"
edition = "2021"
description = "Rust port of the Dire Wolf AFSK demodulator"

[lib]
name = "graywolfmodem"
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Compile the Android JNI upcall helpers (jni_ptt_set / jni_tx_push_samples)
# on the host so unit tests can exercise the dispatch path without an Android
# target or live JVM. Replaces real JNI calls with in-memory mock closures.
android-test-stub = []

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
claxon = "0.4"
prost = "0.13"
bytes = "1"
cpal = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# hidapi (CM108 HID PTT) and nusb (USB topology enumeration) require host
# OS facilities (IOKit / SetupAPI) that aren't available on Android, and
# CM108 PTT isn't a target for Android anyway. Limit them to desktop
# targets so the Android cross-compile doesn't drag them in.
#
# linux-native-basic-udev selects hidapi's pure-Rust hidraw backend with
# the basic-udev pure-Rust enumeration crate. No libudev build/runtime
# dep on Linux. Same kernel /dev/hidraw* interface for I/O; device
# discovery walks /sys/class/hidraw/ directly. macOS (IOKit) and Windows
# (SetupAPI) backends compile via cfg(target_os = ...) gates and are
# unaffected. Avoid the "linux-native" feature: it still pulls the
# libudev-FFI udev crate, which would defeat the point of the swap and
# re-trigger the cross-rs armv6 link failure.
[target.'cfg(not(target_os = "android"))'.dependencies]
hidapi = { version = "2.6", default-features = false, features = ["linux-native-basic-udev"] }
nusb = "0.1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
android_logger = "0.15"
log = "0.4"
ndk-context = "0.1"

[target.'cfg(unix)'.dependencies]
# Direct POSIX access for serial PTT: fcntl::open + libc TIOCMSET ioctls.
# Matches direwolf's approach (no termios calls at all on PTT-only fds).
nix = { version = "0.29", features = ["fs", "ioctl"] }
# Direct libc for poc_a_rxonly's SIGINT/SIGTERM handler. Already present
# transitively via nix; naming it as a direct dep so the bin can call
# libc::signal without relying on transitive re-exports.
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux GPIO PTT via gpiochip chardev v2 API. Pure-Rust; no CGo, no raw
# kernel-header struct layouts maintained locally. Same crate family as
# `go-gpiocdev` used by the Go enumeration side.
gpiocdev = "0.7"
# Direct dep on the uapi crate so we can pattern-match `Errno(i32)` when
# mapping errors. `gpiocdev` re-uses `gpiocdev_uapi::Errno` inside its
# `Error::Os` variant but doesn't re-export the type; naming it requires
# this direct dep. Version pinned to match gpiocdev 0.7's transitive.
gpiocdev-uapi = { version = "0.6", default-features = false, features = ["uapi_v2"] }

[target.'cfg(windows)'.dependencies]
# Windows PTT: CreateFileW + EscapeCommFunction. Microsoft's official
# idiomatic Rust wrapper around Win32, not raw windows-sys.
windows = { version = "0.59", features = [
    "Win32_Devices_Communication",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.bench]
inherits = "release"

[[bench]]
name = "afsk_bench"
harness = false

[[bin]]
name = "graywolf-modem"
path = "src/bin/graywolf_modem.rs"

[[bin]]
name = "demod-bench"
path = "src/bin/demod_bench.rs"

[[bin]]
name = "demod-multi"
path = "src/bin/demod_multi.rs"

[[bin]]
name = "demod-ipc-bench"
path = "src/bin/demod_ipc_bench.rs"

# POC-A Android RX-only bring-up binary. Cross-compiled with cargo-ndk for
# arm64-v8a; on Android cpal 0.17 uses AAudio via the NDK (the modern
# successor to Oboe), so no extra feature flag is needed. On desktop the
# default cpal host (CoreAudio / ALSA / WASAPI) is used for smoke testing.
[[bin]]
name = "poc_a_rxonly"
path = "src/bin/poc_a_rxonly.rs"
